stylesheets/main.scss
---
---

$primary-color: #2a7ae2;
$menu-background: linear-gradient(180deg, #1fc8db, #2a7ae2);

$metadata-color: #818181;

/* Base */
/* ----------------------------------------------------------*/

//* { margin:  0; padding: 0; }

html, body { 
	height: 100%;
	margin: 0; 
	padding: 0;
}

body {
  font-family: system, -apple-system, BlinkMacSystemFont, Helvetica, Arial, sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 300;
}



h1, h2, h3, h4, h5, h6 { 
	line-height: 1;
    font-weight: 500; 
	text-rendering: optimizeLegibility;
    margin-bottom: 0.25rem;
}

h1 {
    font-size: 32px;
    margin-top: 2.5rem;
}

h2 {
    font-size: 24px;
    margin-top: 2.5rem;
    
}

h3 {
    font-size: 20px;
}

p {
	margin-top: 0rem;
}


a       { color: $primary-color; text-decoration: none; }
a:hover { text-decoration: underline; }

ul, ol { 
	padding: 0; 
	list-style-type: none;
}



/* Page */
/* ----------------------------------------------------------*/


.page-content {
    padding: 4rem;
}

@media screen and (min-width: 600px) {
    
	.site-header {
		position: fixed;
		top: 0;
		left: 0;
	  	bottom: 0;
	  	width: 15rem;
	}
    
    .container {
    	margin-left: 15rem;
    }
    
    .site-menu-contents {
    	position: absolute;
    	bottom: 2rem;
    	left: 1rem;
    	right: 1rem;
    }
}

@media screen and (max-width: 600px) {

	.site-header {
		text-align: center;
	}

	.page-content {
    	padding: 2rem;
	}

}


/* Menu */
/* ----------------------------------------------------------*/

.site-header {
	background-color: $primary-color;
  	color: white;

	h1 {
		line-height: 1.25;
  		font-weight: 600; 
  	}
}

.site-title,
.site-title:visited {
	font-size: 3rem;
}


.site-subtitle {
	font-size: 1.5rem;
}


.social {
	margin-top: 1rem;
	margin-bottom: 1rem;
}

.social a + a {
	margin-left: 1rem;
}


/* Site navigation */

.site-nav {
	margin-top: 1rem;
	margin-bottom: 1rem;
}

.site-header a {
    color: white;
/*     display: block; */
/*     text-align: center; */
}

.site-header a:hover {
    text-decoration: underline;
}

nav .nav-current {
	// no special style for the current page
}

nav li { line-height: 1.75; }


@media screen and (min-width: 600px) {
	
	.site-nav {
		font-size: 20px;
	}
    
    .small-print {
    	font-size: 75%;
    }
}


/* Post ??? */
/* ----------------------------------------------------------*/

.posts { 
	
	li { margin-bottom: 30px; }
}


.posts .post-date {
  display: block;
  font-size: 15px;
  color: $metadata-color;
}

.post-header { margin-bottom: 30px; }


.post-header .meta {
  font-size: 15px;
  color: $metadata-color;
}







/* Code */
/* ----------------------------------------------------------*/

pre, code {
  border: 1px solid #f2f2f2;
  color: #bf616a;
  background-color: #fff;
  border-radius: 3px;
  font-size: 12px;
  font-family: menlo, monaco, monospace;
}

code { padding: 1px 5px; }


pre code {
  border: 0;
  padding: 8px 12px;
}

/* terminal */
pre.terminal {
  border: 1px solid #000;
  background-color: #333;
  color: #FFF;
  border-radius: 3px;
}

pre.terminal code { background-color: #333; }

figure.highlight {
	margin-bottom: 20px;
}



/* stuff */
/* ----------------------------------------------------------*/

.img-circle {
    border-radius: 50%;
    border: 4px solid $primary-color;
}

.project .client, .project .role, .project .platform, .project .language {
	font-size: 16px;
	font-weight: 300;
	color: $metadata-color;
}

.project {
    margin-bottom: 40px;
}

.project small {
    font-size: 60%;
}

.component {
	@extend .project;
}

p.intro {
    margin-bottom: 20px;
}


p.subtitle {
    font-style: italic;
}

figure.demo {
	margin-left: 0px;
	margin-right: 0px;
}


/* MathML */
/* ----------------------------------------------------------*/

mrow, msub {
	margin-right: 4px;
}



/* Print */
/* ----------------------------------------------------------*/

@media print {
    .site-header{display:none;}
    body{font-size:12px;}
    h1{font-size:16px;}
    h2{font-size:15px;}
    h3{font-size:14px;}
    h4,h5,h6{font-size:13px;}
}




/* Tokens */
/* ----------------------------------------------------------*/

ul.tokens {
	list-style: none;
// 	float: left;
	padding: 0;
	margin-left: 0;
	width: 100%;
}


ul.tokens li {
	display: inline-block;
	position: relative;
// 	float: left;
    padding: 2px 10px;
    margin: 0 5px 5px 0;
    background: #2a7ae2;
    color: #f5f5f5;
    font-size: 14px;
    border-radius: .2em
}

ul.tokens.blue li {
	background: $primary-color;
}

ul.tokens.grey li {
	background: #555;
}




/* Experience */
/* ----------------------------------------------------------*/


// ul li ul.dropdown {
// // 	min-width: 100%; /* Set width of the dropdown */
// 	background: #f2f2f2;
// 	display: none;
// 	position: absolute;
// // 	z-index: 999;
// // 	left: 0;
// }
// ul li:hover ul.dropdown {
// 	display: block;	/* Display the dropdown */
// 	background: #f2f2f2;
// 	border-radius: 0;
// }
// ul li ul.dropdown li {
// 	background: #f2f2f2 !important;
// 	color: black !important; 
// 	display: block;
// 	float: none;
// }




section.experience ul {
	list-style: disc;
	padding-left: 20px;
}

